--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "keywords": [],
   "author": "Vaqim",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "dotenv": "^8.2.0"
+  },
   "devDependencies": {
     "eslint": "^7.12.1",
     "eslint-config-airbnb": "^18.2.0",
