--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Vaqim",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "nanoid": "^3.1.18"
   },
   "devDependencies": {
     "eslint": "^7.12.1",
