--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
-    "nanoid": "^3.1.18"
+    "nanoid": "^3.1.18",
+    "pg": "^8.5.1"
   },
   "devDependencies": {
     "eslint": "^7.12.1",
