--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,13 @@
 PORT=3000
 ORIGIN=http://localhost:3000/
 
-UPLOADS=./src/uploads
-OPTIMIZED=./src/uploads/optimized
-
 LOGIN=Masters
 PASSWORD=Academy
+
+DB_USER=main
+DB_HOST=localhost
+DB_NAME=main
+DB_PASS=main
+DB_PORT=15432
+
+DATABASE_URL=postgres://${DB_USER}:${DB_PASS}@{DB_HOST}:{DB_PORT}/{DB_NAME}
