--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
+    "knex": "^0.21.15",
     "nanoid": "^3.1.18",
     "node-pg-migrate": "^5.9.0",
     "pg": "^8.5.1"
