--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
-    "db:migration:create": "./node_modules/.bin/node-pg-migrate --m=./src/db/migrations create",
-    "db:migration:up": "./node_modules/.bin/node-pg-migrate up --m=./src/db/migrations",
-    "db:migration:down": "./node_modules/.bin/node-pg-migrate down --m=./src/db/migrations",
-    "db:seeds": "node ./src/db/seeds/index.js"
+    "db:migration:create": "./node_modules/.bin/knex --knexfile=./src/db/knexfile.js migrate:make",
+    "db:migration:up": "./node_modules/.bin/knex --knexfile=./src/db/knexfile.js migrate:up",
+    "db:migration:down": "./node_modules/.bin/knex --knexfile=./src/db/knexfile.js migrate:down",
+    "db:seed:make": "./node_modules/.bin/knex --knexfile=./src/db/knexfile.js seed:make",
+    "db:seed:run": "./node_modules/.bin/knex --knexfile=./src/db/knexfile.js seed:run"
   },
   "keywords": [],
   "author": "Vaqim",
