--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.15",
     "nanoid": "^3.1.18",
     "node-pg-migrate": "^5.9.0",
